# NormativeFlow

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: direct_config.yaml  optuna_config.yaml
src/BrainNormativeRealNVP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/inference/: __init__.py  density_inference.py
src/inference/.ipynb_checkpoints/: sampling_inference-checkpoint.py
src/models/: __init__.py  coupling_layer.py  realnvp.py  transformation_layer.py
src/models/.ipynb_checkpoints/: realnvp-checkpoint.py
src/scripts/: run_inference.py
src/scripts/.ipynb_checkpoints/: train_model-checkpoint.py
src/training/: __init__.py  optuna_trainer.py  train.py
src/training/.ipynb_checkpoints/: train-checkpoint.py
src/utils/: __init__.py  data.py  logger.py
